# voicetranscribe

./: README.md  pyproject.toml  voice_transcribe.py  voice_transcribe_gui.py  whistper.cmd  whistper_gui.cmd
